--- a/index.html
+++ b/index.html
@@ -19,17 +19,33 @@
 </head>
 
 <body>
+
+  <div class="modal" id="User-log">
+    <div class=" modal-dialog modal-dialog-centered">
+      <div class=" modal-content">
+        <div class=" modal-header">
+          <a href="" data-bs-dismiss="modal" class="ms-auto fs-3">
+            <i class="fa-solid fa-xmark" style="color: #000000;"></i>
+          </a>
+        </div>
+        <div class=" modal-body">
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+
   <div class="container-fluid bg-white p-4">
     <div class="row">
       <div
-        class="col-12 col-sm-5 col-md-5 col-lg-2 d-flex align-items-center gap-4 justify-content-center justify-content-sm-start">
+        class="col-12 col-sm-5 col-lg-2 d-flex align-items-center gap-4 justify-content-center justify-content-sm-start">
         <img src="./img/logo.svg" alt="">
         <a href="">
           <i class="fa-solid fa-bars" style="color: #666666;font-size: 24px"></i>
         </a>
       </div>
-      <div class="col-sm-7 col-md-7 col-lg-4 px-4 py-2 rounded-3"
-        style="background-color: rgb(248, 248, 248) !important;">
+      <div class="col-sm-7 col-lg-4 px-4 py-2 rounded-3" style="background-color: rgb(248, 248, 248) !important;">
         <div class="row align-items-center">
           <div class="col-4 d-none d-md-block">
             <select name="" id="" class=" form-select bg-transparent border-0">
@@ -67,7 +83,9 @@
       <div class="col-12 col-lg-2">
         <div id="icon-links"
           class="d-flex align-items-center justify-content-center justify-content-lg-end gap-4 fs-4 h-100 pe-3">
-          <a href=""><i class="fa-regular fa-circle-user" style="color: #000000;"></i></a>
+          <a href="" data-bs-toggle="modal" data-bs-target="#User-log">
+            <i class="fa-regular fa-circle-user" style="color: #000000;"></i>
+          </a>
           <a href=""><i class="fa-regular fa-bookmark" style="color: #000000;"></i></a>
           <a href=""><i class="fa-solid fa-bag-shopping" style="color: #000000;"></i></a>
         </div>
