--- a/index.html
+++ b/index.html
@@ -29,7 +29,37 @@
           </a>
         </div>
         <div class=" modal-body">
-
+          <div class=" d-flex flex-column align-items-center gap-1">
+            <h6 class=" text-warning" style="letter-spacing: 8px;">WELCOME BACK</h6>
+            <i class="fa-solid fa-face-smile-beam" style="color: #FFD43B;font-size:70px"></i>
+          </div>
+          <div class="d-flex flex-column align-items-center gap-1 mt-2">
+            <h1>Sign In to Your Account</h1>
+            <p>Let's get you signed in and straight to the icons.</p>
+          </div>
+          <form action="" class=" w-100">
+            <p class=" m-2 text-black">Email Address</p>
+            <div id="email-input">
+              <i class="fa-solid fa-envelope"></i>
+              <input type="text" placeholder="Enter your gmail...">
+            </div>
+            <p class=" m-2 text-black">Password</p>
+            <div id="email-input">
+              <i class="fa-solid fa-lock"></i>
+              <input type="password">
+            </div>
+            <button type="submit" id="btn-submit">
+              <p class=" m-0">Sign In</p>
+              <i class="fa-solid fa-arrow-right-to-bracket"></i>
+            </button>
+            <div id="rem" class=" d-flex justify-content-between px-2">
+              <div class=" form-check">
+                <label for="" class=" form-label">Remember Me</label>
+                <input type="checkbox" name="" id="" class=" form-check-input">
+              </div>
+              <a href="#">Forgot your password?</a>
+            </div>
+          </form>
         </div>
       </div>
     </div>
