--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./styles.css">
+
   <!-- bootstrap cdn -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -203,7 +204,7 @@
     </div>
   </div>
 
-  <div class="container-fluid bg-white p-4">
+  <div class="container-fluid bg-white px-4 py-3" id="navbar">
     <div class="row">
       <div
         class="col-12 col-sm-5 col-lg-2 d-flex align-items-center gap-4 justify-content-center justify-content-sm-start">
@@ -262,6 +263,22 @@
     </div>
   </div>
 
+  <main id="intro">
+    <div class="w-50 d-flex flex-column justify-content-end">
+      <h1 class="display-1 fw-normal">
+        <span class="text-success fw-bold">Organic</span>
+        Foods at your
+        <span class=" fw-bold">Doorsteps</span>
+      </h1>
+      <p class="fs-3 text-secondary">Dignissim massa diam elementum.</p>
+      <div>
+        <button id="btn-checkout" type="button" class="bg-success rounded-pill px-4 py-3">START SHOPPING</button>
+        <button id="btn-join" type="button" class="bg-black text-white rounded-pill px-4 py-3">JOIN NOW</button>
+      </div>
+    </div>
+  </main>
+
 </body>
+<script src="./scripts.js"></script>
 
 </html>
