--- a/index.html
+++ b/index.html
@@ -264,19 +264,66 @@
   </div>
 
   <main id="intro">
-    <div class="w-50 d-flex flex-column justify-content-end">
+    <div class="w-100 d-flex flex-column justify-content-end px-4 mb-2" id="intro-text">
       <h1 class="display-1 fw-normal">
         <span class="text-success fw-bold">Organic</span>
         Foods at your
         <span class=" fw-bold">Doorsteps</span>
       </h1>
       <p class="fs-3 text-secondary">Dignissim massa diam elementum.</p>
-      <div>
+      <div class=" d-flex gap-3">
         <button id="btn-checkout" type="button" class="bg-success rounded-pill px-4 py-3">START SHOPPING</button>
         <button id="btn-join" type="button" class="bg-black text-white rounded-pill px-4 py-3">JOIN NOW</button>
       </div>
+      <div class=" d-flex justify-content-between">
+        <div id="box1" class="d-sm-flex d-block gap-2">
+          <h1>14k+</h1>
+          <p class="p-0 m-0 fs-5">PRODUCT VERIETIES</p>
+        </div>
+        <div id="box2" class="d-sm-flex d-block gap-2">
+          <h1>50k+</h1>
+          <p class="p-0 m-0 fs-5">Happy Customers</p>
+        </div>
+        <div id="box3" class="d-sm-flex d-block gap-2">
+          <h1>10+</h1>
+          <p class="p-0 m-0 fs-5">Store Locations</p>
+        </div>
+      </div>
+    </div>
+    <div class=" container-fluid align-content-end d-flex" id="intro-box">
+      <div id="Fresh" class="d-flex gap-5 px-5 py-3 bg-success text-white">
+        <div class="mt-3">
+          <i class="fa-solid fa-recycle" style="font-size: 50px;"></i>
+        </div>
+        <div class="">
+          <h3>Fresh from farm</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+        </div>
+      </div>
+      <div id="Organic" class="d-flex gap-5 px-5 py-3 text-white" style="background-color: rgb(6, 43, 6);">
+        <div class="mt-3">
+          <i class="fa-solid fa-recycle" style="font-size: 50px;"></i>
+        </div>
+        <div class="">
+          <h3>Fresh from farm</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+        </div>
+      </div>
+      <div id="delivery" class="d-flex gap-5 px-5 py-3 text-white" style="background-color: rgb(233, 119, 12);">
+        <div class="mt-3">
+          <i class="fa-solid fa-recycle" style="font-size: 50px;"></i>
+        </div>
+        <div class="">
+          <h3>Fresh from farm</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+        </div>
+      </div>
     </div>
   </main>
+
+  <section style="height: 100vh;">
+
+  </section>
 
 </body>
 <script src="./scripts.js"></script>
