--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 
 <body>
@@ -264,7 +267,7 @@
   </div>
 
   <main id="intro">
-    <div class="w-100 d-flex flex-column justify-content-end px-4 mb-2" id="intro-text">
+    <div data-aos="fade-right" class="w-100 d-flex flex-column justify-content-end px-5 mb-3" id="intro-text">
       <h1 class="display-1 fw-normal">
         <span class="text-success fw-bold">Organic</span>
         Foods at your
@@ -290,8 +293,18 @@
         </div>
       </div>
     </div>
-    <div class=" container-fluid align-content-end d-flex" id="intro-box">
-      <div id="Fresh" class="d-flex gap-5 px-5 py-3 bg-success text-white">
+    <div class="px-5 d-block d-sm-flex" id="intro-box">
+      <div id="Fresh" class="d-block d-md-flex gap-5 p-3 bg-success text-white text-center text-md-start">
+        <div class=" mt-3">
+          <i class="fa-solid fa-recycle" style="font-size: 50px;"></i>
+        </div>
+        <div class="">
+          <h3>Fresh from farm</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+        </div>
+      </div>
+      <div id="Organic" class="d-block d-md-flex gap-5 p-3 text-white  text-center text-md-start"
+        style="background-color: rgb(6, 43, 6);">
         <div class="mt-3">
           <i class="fa-solid fa-recycle" style="font-size: 50px;"></i>
         </div>
@@ -300,16 +313,8 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
         </div>
       </div>
-      <div id="Organic" class="d-flex gap-5 px-5 py-3 text-white" style="background-color: rgb(6, 43, 6);">
-        <div class="mt-3">
-          <i class="fa-solid fa-recycle" style="font-size: 50px;"></i>
-        </div>
-        <div class="">
-          <h3>Fresh from farm</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
-        </div>
-      </div>
-      <div id="delivery" class="d-flex gap-5 px-5 py-3 text-white" style="background-color: rgb(233, 119, 12);">
+      <div id="delivery" class="d-block d-md-flex gap-5 p-3 text-white  text-center text-md-start"
+        style="background-color: rgb(233, 119, 12);">
         <div class="mt-3">
           <i class="fa-solid fa-recycle" style="font-size: 50px;"></i>
         </div>
@@ -321,8 +326,15 @@
     </div>
   </main>
 
-  <section style="height: 100vh;">
-
+  <section id="categories" class="px-5 mt-5 container-fluid bg-danger">
+    <div id="text" class="d-flex justify-content-between align-items-center">
+      <h1>Categories</h1>
+      <div id="btn">
+        <button id="btn-view">View All</button>
+        <button id="btn-prev"></button>
+        <button id="btn-next"></button>
+      </div>
+    </div>
   </section>
 
 </body>
