--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+  <!-- AOS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!-- swiper js -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
 
 <body>
@@ -326,13 +329,62 @@
     </div>
   </main>
 
-  <section id="categories" class="px-5 mt-5 container-fluid bg-danger">
+  <section id="categories" class="px-5 mt-5 container-fluid">
     <div id="text" class="d-flex justify-content-between align-items-center">
       <h1>Categories</h1>
       <div id="btn">
-        <button id="btn-view">View All</button>
-        <button id="btn-prev"></button>
-        <button id="btn-next"></button>
+        <button id="btn-view" class="bg-success text-white">View All</button>
+        <button id="btn-prev"><i class="fa-solid fa-angle-left"></i></button>
+        <button id="btn-next"><i class="fa-solid fa-angle-right"></i></button>
+      </div>
+    </div>
+    <div id="list-categories" class="swiper mt-5">
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide">
+          <img src="./img/category-thumb-1.jpg" alt="" width="100%" style="border-radius: 50%;">
+          <p class="text-center mt-3 fs-6">Fruit & Vegetables</p>
+        </div>
+        <div class="swiper-slide">
+          <img src="./img/category-thumb-2.jpg" alt="" width="100%" style="border-radius: 50%;">
+          <p class="text-center mt-3 fs-6">Breads & Sweet</p>
+        </div>
+        <div class="swiper-slide">
+          <img src="./img/category-thumb-3.jpg" alt="" width="100%" style="border-radius: 50%;">
+          <p class="text-center mt-3 fs-6">Fruit & Vegetables</p>
+        </div>
+        <div class="swiper-slide">
+          <img src="./img/category-thumb-4.jpg" alt="" width="100%" style="border-radius: 50%;">
+          <p class="text-center mt-3 fs-6">Baverages</p>
+        </div>
+        <div class="swiper-slide">
+          <img src="./img/category-thumb-5.jpg" alt="" width="100%" style="border-radius: 50%;">
+          <p class="text-center mt-3 fs-6">Meat Products</p>
+        </div>
+        <div class="swiper-slide">
+          <img src="./img/category-thumb-6.jpg" alt="" width="100%" style="border-radius: 50%;">
+          <p class="text-center mt-3 fs-6">Herbs</p>
+        </div>
+        <div class="swiper-slide">
+          <img src="./img/category-thumb-7.jpg" alt="" width="100%" style="border-radius: 50%;">
+          <p class="text-center mt-3 fs-6">Fruit & Vegetables</p>
+        </div>
+        <div class="swiper-slide">
+          <img src="./img/category-thumb-8.jpg" alt="" width="100%" style="border-radius: 50%;">
+          <p class="text-center mt-3 fs-6">Breads & Sweet</p>
+        </div>
+        <div class="swiper-slide">
+          <img src="./img/category-thumb-1.jpg" alt="" width="100%" style="border-radius: 50%;">
+          <p class="text-center mt-3 fs-6">Breads & Sweet</p>
+        </div>
+        <div class="swiper-slide">
+          <img src="./img/category-thumb-1.jpg" alt="" width="100%" style="border-radius: 50%;">
+          <p class="text-center mt-3 fs-6">Breads & Sweet</p>
+        </div>
+        <div class="swiper-slide">
+          <img src="./img/category-thumb-1.jpg" alt="" width="100%" style="border-radius: 50%;">
+          <p class="text-center mt-3 fs-6">Breads & Sweet</p>
+        </div>
       </div>
     </div>
   </section>
