--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
       </div>
     </div>
     <div class="px-5 d-block d-sm-flex" id="intro-box">
-      <div id="Fresh" class="d-block d-md-flex gap-5 p-3 bg-success text-white text-center text-md-start">
-        <div class=" mt-3">
+      <div id="Fresh" class="d-block d-lg-flex gap-5 p-3 bg-success text-white text-center text-lg-start">
+        <div class="mt-3">
           <i class="fa-solid fa-recycle" style="font-size: 50px;"></i>
         </div>
         <div class="">
@@ -306,7 +306,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
         </div>
       </div>
-      <div id="Organic" class="d-block d-md-flex gap-5 p-3 text-white  text-center text-md-start"
+      <div id="Organic" class="d-block d-lg-flex gap-5 p-3 text-white  text-center text-lg-start"
         style="background-color: rgb(6, 43, 6);">
         <div class="mt-3">
           <i class="fa-solid fa-recycle" style="font-size: 50px;"></i>
@@ -316,7 +316,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
         </div>
       </div>
-      <div id="delivery" class="d-block d-md-flex gap-5 p-3 text-white  text-center text-md-start"
+      <div id="delivery" class="d-block d-lg-flex gap-5 p-3 text-white  text-center text-lg-start"
         style="background-color: rgb(233, 119, 12);">
         <div class="mt-3">
           <i class="fa-solid fa-recycle" style="font-size: 50px;"></i>
@@ -330,7 +330,7 @@
   </main>
 
   <section id="categories" class="px-5 mt-5 container-fluid">
-    <div id="text" class="d-flex justify-content-between align-items-center">
+    <div id="text" class="d-block text-center d-sm-flex justify-content-between align-items-center">
       <h1>Categories</h1>
       <div id="btn">
         <button id="btn-view" class="bg-success text-white">View All</button>
@@ -338,7 +338,7 @@
         <button id="btn-next"><i class="fa-solid fa-angle-right"></i></button>
       </div>
     </div>
-    <div id="list-categories" class="swiper mt-5">
+    <div id="list-categories" class="swiper my-5">
       <div class="swiper-wrapper">
         <!-- Slides -->
         <div class="swiper-slide">
