--- a/index.html
+++ b/index.html
@@ -389,6 +389,177 @@
     </div>
   </section>
 
+  <section id="best-selling" class="px-5 my-5 container-fluid">
+    <div id="text" class="d-flex align-items-center justify-content-between">
+      <h1>Best selling products</h1>
+      <div id="btn">
+        <button id="btn-view" class="bg-success text-white">View All</button>
+      </div>
+    </div>
+    <div id="card-products" class="row g-2">
+      <div class="col-12 col-sm-6 col-md-4 col-xl-3">
+        <div id="card" class="py-3 px-4">
+          <div id="img-card" class="w-100 d-flex justify-content-center">
+            <img src="./img/product-thumb-1.png" alt="" class="w-75">
+          </div>
+          <div id="text-title" class="text-center">
+            <p class="m-0 p-0">Whole Wheat Sandwich Bread</p>
+            <div id="icon">
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star-half-stroke" style="color: #FFD43B;"></i>
+              <span class="text-secondary">(222)</span>
+            </div>
+            <div id="dis">
+              <span class="text-secondary" style="text-decoration: line-through;">$24.00</span>
+              <span>$18.00</span>
+              <span id="percent">10% OFF</span>
+            </div>
+            <div id="btn" class="m-0">
+              <div id="card-btn">
+                <input type="number" class="form-control w-25" value="0">
+                <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
+                <button id="btn-heart">
+                  <i class="fa-regular fa-heart"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-xl-3">
+        <div id="card" class="py-3 px-4">
+          <div id="img-card" class="w-100 d-flex justify-content-center">
+            <img src="./img/product-thumb-1.png" alt="" class="w-75">
+          </div>
+          <div id="text-title" class="text-center">
+            <p class="m-0 p-0">Whole Wheat Sandwich Bread</p>
+            <div id="icon">
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star-half-stroke" style="color: #FFD43B;"></i>
+              <span class="text-secondary">(222)</span>
+            </div>
+            <div id="dis">
+              <span class="text-secondary" style="text-decoration: line-through;">$24.00</span>
+              <span>$18.00</span>
+              <span id="percent">10% OFF</span>
+            </div>
+            <div id="btn" class="m-0">
+              <div id="card-btn">
+                <input type="number" class="form-control w-25" value="0">
+                <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
+                <button id="btn-heart">
+                  <i class="fa-regular fa-heart"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-xl-3">
+        <div id="card" class="py-3 px-4">
+          <div id="img-card" class="w-100 d-flex justify-content-center">
+            <img src="./img/product-thumb-1.png" alt="" class="w-75">
+          </div>
+          <div id="text-title" class="text-center">
+            <p class="m-0 p-0">Whole Wheat Sandwich Bread</p>
+            <div id="icon">
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star-half-stroke" style="color: #FFD43B;"></i>
+              <span class="text-secondary">(222)</span>
+            </div>
+            <div id="dis">
+              <span class="text-secondary" style="text-decoration: line-through;">$24.00</span>
+              <span>$18.00</span>
+              <span id="percent">10% OFF</span>
+            </div>
+            <div id="btn" class="m-0">
+              <div id="card-btn">
+                <input type="number" class="form-control w-25" value="0">
+                <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
+                <button id="btn-heart">
+                  <i class="fa-regular fa-heart"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-xl-3">
+        <div id="card" class="py-3 px-4">
+          <div id="img-card" class="w-100 d-flex justify-content-center">
+            <img src="./img/product-thumb-1.png" alt="" class="w-75">
+          </div>
+          <div id="text-title" class="text-center">
+            <p class="m-0 p-0">Whole Wheat Sandwich Bread</p>
+            <div id="icon">
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star-half-stroke" style="color: #FFD43B;"></i>
+              <span class="text-secondary">(222)</span>
+            </div>
+            <div id="dis">
+              <span class="text-secondary" style="text-decoration: line-through;">$24.00</span>
+              <span>$18.00</span>
+              <span id="percent">10% OFF</span>
+            </div>
+            <div id="btn" class="m-0">
+              <div id="card-btn">
+                <input type="number" class="form-control w-25" value="0">
+                <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
+                <button id="btn-heart">
+                  <i class="fa-regular fa-heart"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-xl-3">
+        <div id="card" class="py-3 px-4">
+          <div id="img-card" class="w-100 d-flex justify-content-center">
+            <img src="./img/product-thumb-1.png" alt="" class="w-75">
+          </div>
+          <div id="text-title" class="text-center">
+            <p class="m-0 p-0">Whole Wheat Sandwich Bread</p>
+            <div id="icon">
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star-half-stroke" style="color: #FFD43B;"></i>
+              <span class="text-secondary">(222)</span>
+            </div>
+            <div id="dis">
+              <span class="text-secondary" style="text-decoration: line-through;">$24.00</span>
+              <span>$18.00</span>
+              <span id="percent">10% OFF</span>
+            </div>
+            <div id="btn" class="m-0">
+              <div id="card-btn">
+                <input type="number" class="form-control w-25" value="0">
+                <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
+                <button id="btn-heart">
+                  <i class="fa-regular fa-heart"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
 </body>
 <script src="./scripts.js"></script>
 
