--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         <button id="btn-view" class="bg-success text-white">View All</button>
       </div>
     </div>
-    <div id="card-products" class="row g-2">
+    <div id="card-products" class="row g-2 g-xxl-4">
       <div class="col-12 col-sm-6 col-md-4 col-xl-3">
         <div id="card" class="py-3 px-4">
           <div id="img-card" class="w-100 d-flex justify-content-center">
@@ -419,7 +419,7 @@
             </div>
             <div id="btn" class="m-0">
               <div id="card-btn">
-                <input type="number" class="form-control w-25" value="0">
+                <input type="text" class="form-control w-25" value="0">
                 <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
                 <button id="btn-heart">
                   <i class="fa-regular fa-heart"></i>
@@ -432,7 +432,7 @@
       <div class="col-12 col-sm-6 col-md-4 col-xl-3">
         <div id="card" class="py-3 px-4">
           <div id="img-card" class="w-100 d-flex justify-content-center">
-            <img src="./img/product-thumb-1.png" alt="" class="w-75">
+            <img src="./img/product-thumb-2.png" alt="" class="w-75">
           </div>
           <div id="text-title" class="text-center">
             <p class="m-0 p-0">Whole Wheat Sandwich Bread</p>
@@ -451,7 +451,7 @@
             </div>
             <div id="btn" class="m-0">
               <div id="card-btn">
-                <input type="number" class="form-control w-25" value="0">
+                <input type="text" class="form-control w-25" value="0">
                 <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
                 <button id="btn-heart">
                   <i class="fa-regular fa-heart"></i>
@@ -464,7 +464,7 @@
       <div class="col-12 col-sm-6 col-md-4 col-xl-3">
         <div id="card" class="py-3 px-4">
           <div id="img-card" class="w-100 d-flex justify-content-center">
-            <img src="./img/product-thumb-1.png" alt="" class="w-75">
+            <img src="./img/product-thumb-3.png" alt="" class="w-75">
           </div>
           <div id="text-title" class="text-center">
             <p class="m-0 p-0">Whole Wheat Sandwich Bread</p>
@@ -483,7 +483,7 @@
             </div>
             <div id="btn" class="m-0">
               <div id="card-btn">
-                <input type="number" class="form-control w-25" value="0">
+                <input type="text" class="form-control w-25" value="0">
                 <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
                 <button id="btn-heart">
                   <i class="fa-regular fa-heart"></i>
@@ -496,7 +496,7 @@
       <div class="col-12 col-sm-6 col-md-4 col-xl-3">
         <div id="card" class="py-3 px-4">
           <div id="img-card" class="w-100 d-flex justify-content-center">
-            <img src="./img/product-thumb-1.png" alt="" class="w-75">
+            <img src="./img/product-thumb-4.png" alt="" class="w-75">
           </div>
           <div id="text-title" class="text-center">
             <p class="m-0 p-0">Whole Wheat Sandwich Bread</p>
@@ -515,7 +515,7 @@
             </div>
             <div id="btn" class="m-0">
               <div id="card-btn">
-                <input type="number" class="form-control w-25" value="0">
+                <input type="text" class="form-control w-25" value="0">
                 <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
                 <button id="btn-heart">
                   <i class="fa-regular fa-heart"></i>
@@ -528,7 +528,7 @@
       <div class="col-12 col-sm-6 col-md-4 col-xl-3">
         <div id="card" class="py-3 px-4">
           <div id="img-card" class="w-100 d-flex justify-content-center">
-            <img src="./img/product-thumb-1.png" alt="" class="w-75">
+            <img src="./img/product-thumb-5.png" alt="" class="w-75">
           </div>
           <div id="text-title" class="text-center">
             <p class="m-0 p-0">Whole Wheat Sandwich Bread</p>
@@ -547,7 +547,7 @@
             </div>
             <div id="btn" class="m-0">
               <div id="card-btn">
-                <input type="number" class="form-control w-25" value="0">
+                <input type="text" class="form-control w-25" value="0">
                 <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
                 <button id="btn-heart">
                   <i class="fa-regular fa-heart"></i>
@@ -557,6 +557,103 @@
           </div>
         </div>
       </div>
+      <div class="col-12 col-sm-6 col-md-4 col-xl-3">
+        <div id="card" class="py-3 px-4">
+          <div id="img-card" class="w-100 d-flex justify-content-center">
+            <img src="./img/product-thumb-6.png" alt="" class="w-75">
+          </div>
+          <div id="text-title" class="text-center">
+            <p class="m-0 p-0">Whole Wheat Sandwich Bread</p>
+            <div id="icon">
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star-half-stroke" style="color: #FFD43B;"></i>
+              <span class="text-secondary">(222)</span>
+            </div>
+            <div id="dis">
+              <span class="text-secondary" style="text-decoration: line-through;">$24.00</span>
+              <span>$18.00</span>
+              <span id="percent">10% OFF</span>
+            </div>
+            <div id="btn" class="m-0">
+              <div id="card-btn">
+                <input type="text" class="form-control w-25" value="0">
+                <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
+                <button id="btn-heart">
+                  <i class="fa-regular fa-heart"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-xl-3">
+        <div id="card" class="py-3 px-4">
+          <div id="img-card" class="w-100 d-flex justify-content-center">
+            <img src="./img/product-thumb-7.png" alt="" class="w-75">
+          </div>
+          <div id="text-title" class="text-center">
+            <p class="m-0 p-0">Whole Wheat Sandwich Bread</p>
+            <div id="icon">
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star-half-stroke" style="color: #FFD43B;"></i>
+              <span class="text-secondary">(222)</span>
+            </div>
+            <div id="dis">
+              <span class="text-secondary" style="text-decoration: line-through;">$24.00</span>
+              <span>$18.00</span>
+              <span id="percent">10% OFF</span>
+            </div>
+            <div id="btn" class="m-0">
+              <div id="card-btn">
+                <input type="text" class="form-control w-25" value="0">
+                <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
+                <button id="btn-heart">
+                  <i class="fa-regular fa-heart"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-xl-3">
+        <div id="card" class="py-3 px-4">
+          <div id="img-card" class="w-100 d-flex justify-content-center">
+            <img src="./img/product-thumb-8.png" alt="" class="w-75">
+          </div>
+          <div id="text-title" class="text-center">
+            <p class="m-0 p-0">Whole Wheat Sandwich Bread</p>
+            <div id="icon">
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+              <i class="fa-solid fa-star-half-stroke" style="color: #FFD43B;"></i>
+              <span class="text-secondary">(222)</span>
+            </div>
+            <div id="dis">
+              <span class="text-secondary" style="text-decoration: line-through;">$24.00</span>
+              <span>$18.00</span>
+              <span id="percent">10% OFF</span>
+            </div>
+            <div id="btn" class="m-0">
+              <div id="card-btn">
+                <input type="text" class="form-control w-25" value="0">
+                <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
+                <button id="btn-heart">
+                  <i class="fa-regular fa-heart"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
     </div>
   </section>
