--- a/index.html
+++ b/index.html
@@ -419,7 +419,15 @@
             </div>
             <div id="btn" class="m-0">
               <div id="card-btn">
-                <input type="text" class="form-control w-25" value="0">
+                <input type="text" id="count" class="form-control" value="0" readonly>
+                <div id="btn-in">
+                  <button type="button" id="btn-up" onclick="increase()">
+                    <i class="fa-solid fa-angle-up"></i>
+                  </button>
+                  <button type="button" id="btn-down" onclick="decrease()">
+                    <i class="fa-solid fa-angle-down"></i>
+                  </button>
+                </div>
                 <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
                 <button id="btn-heart">
                   <i class="fa-regular fa-heart"></i>
@@ -451,7 +459,15 @@
             </div>
             <div id="btn" class="m-0">
               <div id="card-btn">
-                <input type="text" class="form-control w-25" value="0">
+                <input type="text" id="count" class="form-control" value="0" readonly>
+                <div id="btn-in">
+                  <button type="button" id="btn-up" onclick="increase()">
+                    <i class="fa-solid fa-angle-up"></i>
+                  </button>
+                  <button type="button" id="btn-down" onclick="decrease()">
+                    <i class="fa-solid fa-angle-down"></i>
+                  </button>
+                </div>
                 <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
                 <button id="btn-heart">
                   <i class="fa-regular fa-heart"></i>
@@ -483,7 +499,15 @@
             </div>
             <div id="btn" class="m-0">
               <div id="card-btn">
-                <input type="text" class="form-control w-25" value="0">
+                <input type="text" id="count" class="form-control" value="0" readonly>
+                <div id="btn-in">
+                  <button type="button" id="btn-up" onclick="increase()">
+                    <i class="fa-solid fa-angle-up"></i>
+                  </button>
+                  <button type="button" id="btn-down" onclick="decrease()">
+                    <i class="fa-solid fa-angle-down"></i>
+                  </button>
+                </div>
                 <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
                 <button id="btn-heart">
                   <i class="fa-regular fa-heart"></i>
@@ -515,7 +539,15 @@
             </div>
             <div id="btn" class="m-0">
               <div id="card-btn">
-                <input type="text" class="form-control w-25" value="0">
+                <input type="text" id="count" class="form-control" value="0" readonly>
+                <div id="btn-in">
+                  <button type="button" id="btn-up" onclick="increase()">
+                    <i class="fa-solid fa-angle-up"></i>
+                  </button>
+                  <button type="button" id="btn-down" onclick="decrease()">
+                    <i class="fa-solid fa-angle-down"></i>
+                  </button>
+                </div>
                 <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
                 <button id="btn-heart">
                   <i class="fa-regular fa-heart"></i>
@@ -547,7 +579,15 @@
             </div>
             <div id="btn" class="m-0">
               <div id="card-btn">
-                <input type="text" class="form-control w-25" value="0">
+                <input type="text" id="count" class="form-control" value="0" readonly>
+                <div id="btn-in">
+                  <button type="button" id="btn-up" onclick="increase()">
+                    <i class="fa-solid fa-angle-up"></i>
+                  </button>
+                  <button type="button" id="btn-down" onclick="decrease()">
+                    <i class="fa-solid fa-angle-down"></i>
+                  </button>
+                </div>
                 <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
                 <button id="btn-heart">
                   <i class="fa-regular fa-heart"></i>
@@ -579,7 +619,15 @@
             </div>
             <div id="btn" class="m-0">
               <div id="card-btn">
-                <input type="text" class="form-control w-25" value="0">
+                <input type="text" id="count" class="form-control" value="0" readonly>
+                <div id="btn-in">
+                  <button type="button" id="btn-up" onclick="increase()">
+                    <i class="fa-solid fa-angle-up"></i>
+                  </button>
+                  <button type="button" id="btn-down" onclick="decrease()">
+                    <i class="fa-solid fa-angle-down"></i>
+                  </button>
+                </div>
                 <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
                 <button id="btn-heart">
                   <i class="fa-regular fa-heart"></i>
@@ -611,7 +659,15 @@
             </div>
             <div id="btn" class="m-0">
               <div id="card-btn">
-                <input type="text" class="form-control w-25" value="0">
+                <input type="text" id="count" class="form-control" value="0" readonly>
+                <div id="btn-in">
+                  <button type="button" id="btn-up" onclick="increase()">
+                    <i class="fa-solid fa-angle-up"></i>
+                  </button>
+                  <button type="button" id="btn-down" onclick="decrease()">
+                    <i class="fa-solid fa-angle-down"></i>
+                  </button>
+                </div>
                 <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
                 <button id="btn-heart">
                   <i class="fa-regular fa-heart"></i>
@@ -643,7 +699,15 @@
             </div>
             <div id="btn" class="m-0">
               <div id="card-btn">
-                <input type="text" class="form-control w-25" value="0">
+                <input type="text" id="count" class="form-control" value="0" readonly>
+                <div id="btn-in">
+                  <button type="button" id="btn-up" onclick="increase()">
+                    <i class="fa-solid fa-angle-up"></i>
+                  </button>
+                  <button type="button" id="btn-down" onclick="decrease()">
+                    <i class="fa-solid fa-angle-down"></i>
+                  </button>
+                </div>
                 <button id="btn-view" class="bg-success text-white m-0 w-50">View All</button>
                 <button id="btn-heart">
                   <i class="fa-regular fa-heart"></i>
@@ -653,6 +717,7 @@
           </div>
         </div>
       </div>
+
 
 
     </div>
