--- a/index.html
+++ b/index.html
@@ -717,9 +717,29 @@
           </div>
         </div>
       </div>
-
-
-
+    </div>
+  </section>
+  <section id="banner" class="px-5 my-5">
+    <div id="block-1" class="d-flex align-items-center ps-5">
+      <div class=" text-white">
+        <h2>Items on SALE</h2>
+        <p>Discounts up to 30%</p>
+        <a href="#" id="shop-now">SHOP NOW</a>
+      </div>
+    </div>
+    <div id="block-2" class="d-flex align-items-center ps-5">
+      <div class=" text-white">
+        <h2>Cambo offers</h2>
+        <p>Discounts up to 50%</p>
+        <a href="#" id="shop-now">SHOP NOW</a>
+      </div>
+    </div>
+    <div id="block-3" class="d-flex align-items-center ps-5">
+      <div class=" text-white">
+        <h2>Discounts Coupons</h2>
+        <p>Discounts up to 40%</p>
+        <a href="#" id="shop-now">SHOP NOW</a>
+      </div>
     </div>
   </section>
 </body>
